--- a/options.html
+++ b/options.html
@@ -550,10 +550,10 @@ function updatePredictedHitsCount() {
       </tr>
     </table><br>
     <label for="tweets_notification_style">Notification Style:</label>
-    <input type="radio" name="tweets_notification_style" value="on_page"> Notify on Page
-    <input type="radio" name="tweets_notification_style" value="desktop"> Desktop Notifications<br>
-    <label for="notification_fade_timeout">On Page Fade Timeout:</label>
-    <input type="text" name="notification_fade_timeout" validator="required,number,positive"><br>
+    <input type="radio" name="tweets_notification_style" value="on_page" id="noti_on_page"> <label for="noti_on_page" class="radio_opt">Notify on Page</label>
+    <input type="radio" name="tweets_notification_style" value="desktop" id="noti_desktop"> <label for="noti_desktop" class="radio_opt">Desktop Notifications</label><br>
+    <label for="notification_fade_timeout">Notification Timeout (s):</label>
+    <input type="text" name="notification_fade_timeout" validator="required,number,positive" converter="RefreshInterval"><br>
   </fieldset>
 
   <fieldset>
@@ -651,8 +651,8 @@ function updatePredictedHitsCount() {
 
   <fieldset>
     <legend>Microblogging Service</legend>
-    <input type="radio" name="microblogging_service" value="twitter" must_restart> Twitter
-    <input type="radio" name="microblogging_service" value="identica" must_restart> identi.ca
+    <input type="radio" name="microblogging_service" value="twitter" id="service_twitter" must_restart> <label for="service_twitter" class="radio_opt">Twitter</label>
+    <input type="radio" name="microblogging_service" value="identica" id="service_identica" must_restart> <label for="service_identica" class="radio_opt">identi.ca</label>
   </fieldset>
 
   <fieldset>
