Defaulting to desktop notifications.

--- a/background.html
+++ b/background.html
@@ -43,7 +43,7 @@ OptionsBackend = {
     base_signing_url: 'http://api.twitter.com/1/',
     base_oauth_signing_url: 'https://twitter.com/oauth/',
 
-    tweets_notification_style: 'on_page',
+    tweets_notification_style: 'desktop',
     home_on_page: false,
     home_icon: true,
     mentions_on_page: true,
