--- a/popup.html
+++ b/popup.html
@@ -434,6 +434,9 @@ var Composer = {
   },
 
   refreshNew: function() {
+    if($("#loading").is(":visible")) {
+      return;
+    }
     loadTimeline(true);
   }
 }
