--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -29,12 +29,16 @@
         Renderer.fadeTimeout = response.fadeTimeout;
         $(document.body).prepend(Renderer.simpleAssemblyTweets([tweet]));
 
-        $('#progress').show().css('bottom', '0px').animate({width: '0px'}, response.fadeTimeout, 'linear', function() {
-          window.close();
-        });
-        $(document.body).click(function() {
-          $('#progress').stop().hide();
-        });
+        setTimeout(function() {
+          // Delay displaying progress bar
+          $('#progress').show().css('bottom', '0px').css('width', '100%')
+                .animate({width: '0px'}, response.fadeTimeout, 'linear', function() {
+            window.close();
+          });
+          $(document.body).click(function() {
+            $('#progress').stop().hide();
+          });
+        }, 100);
       } else {
         window.close();
       }
