--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -33,6 +33,11 @@
           // Delay displaying progress bar
           $('#progress').show().css('bottom', '0px').css('width', '100%')
                 .animate({width: '0px'}, response.fadeTimeout, 'linear', function() {
+            // Tell background page that this tweet shouldn't be marked as read
+            chrome.extension.sendRequest({
+              cb_tweet_should_not_read: true,
+              tweet_id: tweet.id
+            });
             window.close();
           });
           $(document.body).click(function() {
