--- a/popup.html
+++ b/popup.html
@@ -903,6 +903,8 @@ var Lists = {
           Renderer.showError('Unexpected error ' + status + ' fetching lists.', 'Lists.init', 'true');
           return;
         }
+      }
+      if(!lists) {
         lists = [];
       }
       var listsTabCount = tweetManager.listsTabCount;
